--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2-beta
 
     - name: Setup Node.js environment
-      uses: actions/setup-node@1.4.2
+      uses: actions/setup-node@v1.4.2
       with:
         version: 12
     - name: action-yarn
