--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         version: 12
     - name: action-yarn
-      uses: Borales/action-yarn@v2.1.0 
+      uses: Borales/actions-yarn@v2.1.0 
       with:
         cmd: install
         
