--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         cmd: install
         
-    - name: yarn build 
+    - name: Creating build
       run: yarn build 
       
     - name: install surge 
