--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       run: yarn build 
       
     - name: install surge 
-      run: yarn add surge
+      run: npm install --global surge
 
-      
+
     - name: deploy on surge
       run: surge ./build http://covidtracking.surge.sh/ --token ${{secrets.COVID19TRACKER}}
