--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v2-beta
       with:
-       node version: 12
+        version: 12
     - name: action-yarn
       uses: Borales/actions-yarn@v2.1.0 
       with:
